fix text overflow error

--- a/client/app/components/_expandablePanel/expandablePanel.styl
+++ b/client/app/components/_expandablePanel/expandablePanel.styl
@@ -1,26 +1,27 @@
 $borderGrey = #ccc
 $gradientLightGrey = #eee
 
-.expandablePanelSlider
-  text-align center
-  position relative
-  border-top 1px solid $borderGrey
+expandable-panel
+  .expandablePanelSlider
+    text-align center
+    position relative
+    border-top 1px solid $borderGrey
 
-  button
-    position absolute
-    top -1em
+    button
+      position absolute
+      top -1em
 
   .content
       overflow hidden
       transition max-height 1s
 
-.expandablePanelSlider:before
-  display block
-  content ""
-  position relative
-  top -1em
-  height 1em
-  background-image linear-gradient(0, $gradientLightGrey 0, rgba(0, 0, 0, 0) 100%)
-  opacity 1
+  .expandablePanelSlider:before
+    display block
+    content ""
+    position relative
+    top -1em
+    height 1em
+    background-image linear-gradient(0, $gradientLightGrey 0, rgba(0, 0, 0, 0) 100%)
+    opacity 1
 
   
